lib_LIBRARIES = libdramsim.a

libdramsim_a_SOURCES = \
	\
	AddressMapping.cpp \
	AddressMapping.h \
	\
	Bank.cpp \
	Bank.h \
	\
	BankState.cpp \
	BankState.h \
	\
	BindingsC.cpp \
	BindingsC.h \
	\
	BusPacket.cpp \
	BusPacket.h \
	\
	Callback.h \
	\
	ClockDomain.cpp \
	ClockDomain.h \
	\
	CommandQueue.cpp \
	CommandQueue.h \
	\
	CSVWriter.h \
	\
	IniReader.cpp \
	IniReader.h \
	\
	MemoryController.cpp \
	MemoryController.h \
	\
	MemorySystem.cpp \
	MemorySystem.h \
	\
	MultiChannelMemorySystem.cpp \
	MultiChannelMemorySystem.h \
	\
	PrintMacros.h \
	\
	Rank.cpp \
	Rank.h \
	\
	SimulatorObject.cpp \
	SimulatorObject.h \
	\
	SystemConfiguration.h \
	\
	Transaction.cpp \
	Transaction.h

AM_CPPFLAGS = -I. -DNO_STORAGE -DDEBUG_BUILD -DNO_OUTPUT
AM_CXXFLAGS = -std=c++0x 
